bk_ida/gccida/g3/get_last_value_validate
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_last_value_validate/src/combine.c:11949:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v15 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v27) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_last_value_validate/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_last_value_validate/src/combine.c:12021:22: error: expected expression
insn_cuid_0( ( rtx)( unsigned int)max_uid_cuid); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_last_value_validate/src/combine.c:12041:14: error: expected expression
fld = ( rtx *)v6->fld; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_last_value_validate/src/combine.c:12056:20: error: expected expression
if ( fld == ( rtx *)v11 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_last_value_validate/src/combine.c:12065:34: error: use of undeclared identifier 'machine_mode'
*loc = gen_rtx_fmt_e( CLOBBER, ( machine_mode)*( ( unsigned __int8 *)v6 + 2), const_int_rtx[64]); 
                                 ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/get_last_value_validate/src/obj/combine.o] Error 1
